--- a/templates/post_uploaded.html
+++ b/templates/post_uploaded.html
@@ -13,8 +13,8 @@
     <h1>Пост добавлен! </h1>
 
     <div class="post">
-        <img src="./uploads/images/{{post['pic']}}" width="100%" alt="">
-        <p>{{post['content']}}}</p>
+        <img src="./uploads/images/{{post}}" width="100%" alt="">
+        <p>{{post['content']}}</p>
     </div>
 
     <hr>
